src/style.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.base a, .footer a {
    @apply text-blue-400;
}

* {
    -ms-touch-action: pan-x pan-y;
    -ms-content-zooming: pan-x pan-y;
    touch-action: pan-x pan-y;
}

.disable-selection div {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

    -ms-touch-action: none;
    -ms-content-zooming: none;
    touch-action: none;
}

.button-green {
    @apply bg-gradient-to-br from-green-400 to-green-600 text-white px-4 py-1 rounded cursor-pointer;
}

.button-blue {
    @apply bg-gradient-to-br from-blue-400 to-blue-600 text-white px-4 py-1 rounded cursor-pointer;
}

.tag {
    @apply rounded px-2 py-1 text-sm text-black bg-gray-300;
}

.tag-success {
    @apply rounded px-2 py-1 text-sm text-black bg-green-300;
}

.tag-primary {
    @apply rounded px-2 py-1 text-sm text-black bg-blue-300;
}

.tag-warning {
    @apply rounded px-2 py-1 text-sm text-black bg-yellow-300;
}

.logo {
    background-image: url(/resources/logo192.png);
    @apply w-10;
}

@media screen and (min-width: 600px) {
	.logo {
	    background-image: url(/resources/logo-wide.png);
        @apply w-36;
    }
}

.linux-logo {
    background-image: url(/resources/linux-logo.png);
    @apply w-28 h-28 bg-contain bg-no-repeat;
}

.windows-logo {
    background-image: url(/resources/windows-logo.png);
    @apply w-28 h-28 bg-contain bg-no-repeat;
}

.apple-logo {
    background-image: url(/resources/apple-logo.svg);
    @apply w-28 h-28 bg-contain bg-no-repeat;
}

.gp-logo {
    background-image: url(/resources/gp-logo.png);
    @apply w-28 h-28 bg-contain bg-no-repeat;
}

.search-line {
    @apply p-5 bg-gradient-to-r from-yellow-400 via-red-500 to-pink-500;
	min-height: 80px;
}

.search-line-button {
    @apply uppercase font-bold font-mono pt-1 px-4 mt-px;
    text-decoration: none !important;
    color: white !important;
}

.overlay {
    z-index: 1001;
}

/* TODO: refactor to use tailwind.css */

.margin-right {
	margin-right: 6px;
}

.callout {
	margin: 20px 10px;
}

.callout h1.bp3-heading {
	font-size: 22px;
}

.screenshots {
    display: flex;
    flex-wrap: wrap;
    overflow: hidden;
}

.screenshots img {
	margin-right: 10px;
	margin-bottom: 10px;
	max-width: 90vw;
	max-height: 200px;
}

.actions {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
}

.catalog {
	display: flex;
	flex-direction: column;
    @apply -mt-10 mb-10 ml-20 text-lg;
}

.catalog-symbol {
	display: flex;
	flex-direction: column;
    @apply mt-4 mb-10 ml-20 text-lg;
}

.letter {
	margin-top: 40px;
	font-weight: bold;
}

.footer {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-evenly;
	margin-top: 40px;
	margin-bottom: 40px;
	border-top: 1px solid rgba(0,0,0,.1);
	padding-top: 40px;
}

.more {
	display: flex;
	flex-direction: column;
}

.more a {
	margin-bottom: 10px;
}

.search-content {
	display: flex;
	flex-direction: row;
    z-index: 999;
}

.search-content button {
	margin-left: 10px;
}

.callout-top-list {
	margin-top: 100px;
}

.callout-top-list h1 {
	margin-top: 20px !important;
}

.edit-page {
	margin-left: 20px;
	font-size: 10px;
}

.fork {
	margin-left: 25px;
}

.datafiles {
	margin-left: 35px;
	cursor: pointer;
}

.bundle-row {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

.bundle-row span {
	margin-left: 5px;
}

.heartbeat {
	animation: heartbeat 5s ease-in-out infinite both;
    animation-delay: 2s;
}

@keyframes heartbeat {
  from {
      transform: scale(1);
      transform-origin: center center;
      animation-timing-function: ease-out;
  }
  2% {
      transform: scale(1.09);
      animation-timing-function: ease-in;
  }
  4% {
      transform: scale(1.02);
      animation-timing-function: ease-out;
  }
  8% {
      transform: scale(1.14);
      animation-timing-function: ease-in;
  }
  11% {
      transform: scale(1);
      animation-timing-function: ease-out;
  }
}

.jsdos-code,
.jsdos-frame {
    left: 20px;
    top: 20px;
    right: 25px;

    background: black;
  	box-shadow: 15px 15px rgba(0, 0, 0, 0.5);
    padding: 5px;
    border: 5px double white;

	z-index: 999;
}

.jsdos-frame {
    position: absolute;
    bottom: 25px;
}

.jsdos-code {
    position: fixed;
    padding: 5px 10px;
}

.live-frame {
    display: block;
    width: 400px;
    z-index: 1000;

    background: #475569;
  	box-shadow: 15px 15px rgba(0, 0, 0, 0.5);
    padding: 5px;
    border: 5px double white;

    margin-top: 20px;
    margin-bottom: 25px;
    margin-right: 20px;
}

.stream-frame {
    @apply w-full;
    height: 100vh;
}

@media screen and (max-width: 960px) {
    .jsdos-frame {
        left: 0;
        top: 0;
        right: 0;
        bottom: 0;

        border: none;
        box-shadow: none;
        padding: 0;
        background: none;
    }

    .live-frame {
        position: absolute;
        right: 0;
        top: 0;
        height: 100%;

        margin: 0;
        border: none;
        padding: 0;
        box-shadow: none;
    }
}

.jsdos-frame-fullscreen {
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;

    border: none;
    box-shadow: none;
    padding: 0;
    background: none;
}

.jsdos-iframe {
	position: relative;
	width: 100%;
	height: 100%;
    background: black;
}

.gone {
	display: none !important;
}

.auth-logout {
	display: flex;
	align-items: center;
}

.avatar {
    width: 20px;
    height: 20px;
    border-radius: 50%;
    cursor: pointer;
    margin-right: 5px;
    border: 1px solid #2B95D6;
}

.jsdos-login-frame {
    position: fixed;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
	display: flex;

	align-items: center;
	justify-content: center;
	z-index: 1000;
}

.jsdos-login {
	min-width: 300px;
	max-width: 80%;
	margin-top: -20%;
	z-index: 999;
}

.jsdos-login-native-gapi {
	width: 100%;
	height: 36px;
}

.jsdos-login-talks {
	margin-top: 15px;
	height: 36px;
	width: 100%;
}

.jsdos-login-gapi,
.jsdos-login-gapi > div {
	width: 100% !important;
}

.jsdos-login h1 {
	text-align: center;
}

.donate-link {
    visibility: hidden;
}

div.pp h1 {
    @apply font-bold mt-10;
}

div.pp h2, div.pp h3 {
    @apply mt-4 font-bold;
}

div.pp p {
    @apply mt-4;
}

div.pp ul {
    @apply list-disc ml-12;
}

.jsdos-v8-window {
    display: none;
    position: relative;
    height: 20vh;
}

.jsdos-v8 {
    @apply absolute top-12 left-0 right-0 bottom-0;
    height: auto !important;
}

